samples/_failures_safe/1761356156_23264f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_816be05f.c: In function ‘main’:
./samples/SAFE/__tmp_816be05f.c:150:37: error: missing terminating ' character
  150 |                 while (getchar() != '\n
      |                                     ^~~
./samples/SAFE/__tmp_816be05f.c:150:17: error: expected expression at end of input
  150 |                 while (getchar() != '\n
      |                 ^~~~~
./samples/SAFE/__tmp_816be05f.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_816be05f.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_816be05f.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_816be05f.c:150:17: error: expected declaration or statement at end of input
